Closed
Bug 1503395
Opened 7 years ago
Closed 7 years ago
Fetch Headers Only - download rest of message does not respond if Global Inbox (in Local Folders) is used
Categories
(MailNews Core :: Networking: POP, defect)
Tracking
(thunderbird_esr6064+ fixed, thunderbird64 fixed, thunderbird65 fixed)
RESOLVED
FIXED
Thunderbird 65.0
People
(Reporter: dave, Assigned: jorgk-bmo)
References
Details
Attachments
(1 file)
|
1.46 KB,
patch
|
aceman
:
review+
jorgk-bmo
:
approval-comm-beta+
jorgk-bmo
:
approval-comm-esr60+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:63.0) Gecko/20100101 Firefox/63.0
Steps to reproduce:
I have accounts which are set to download headers only.
Actual results:
If I click on 'Download the rest of the message' nothing happens.
Expected results:
Body of message should have been downloaded. I now have to select File->Offline>Get selected messages to download the rest of the message.
Only started after upgrade from version 52 to 60.2.1
Comment 1•7 years ago
|
||
Doesw it also happen if you have thunderbird started in safe mode?
Flags: needinfo?(dave)
| Reporter | ||
Comment 2•7 years ago
|
||
(In reply to Wayne Mery (:wsmwk) from comment #1)
> Doesw it also happen if you have thunderbird started in safe mode?
Yes.
I don't know if it is relevant, but Offline Settings is also disabled whether I am online or offline.
Flags: needinfo?(dave)
| Assignee | ||
Comment 3•7 years ago
|
||
Hmm, that feature broke a few times in the last 48 months (bug 1361020, bug 1367707, bug 1378290, bug 1446679) :-( - but it *is* working in TB 60.3.0 (and should be working in TB 60.2.1). I've just tried it.
So we really need more specific information as to why this is failing for you.
Can you create a new profile (start Thunderbird with -p) and configure one of your POP accounts in that way.
| Reporter | ||
Comment 4•7 years ago
|
||
(In reply to Jorg K (GMT+2) from comment #3)
> Hmm, that feature broke a few times in the last 48 months (bug 1361020, bug
> 1367707, bug 1378290, bug 1446679) :-( - but it *is* working in TB 60.3.0
> (and should be working in TB 60.2.1). I've just tried it.
>
> So we really need more specific information as to why this is failing for
> you.
>
> Can you create a new profile (start Thunderbird with -p) and configure one
> of your POP accounts in that way.
Yes, it works with the new profile. I can't see any difference in the account settings. But in my normal profile everything is in Local Folders and all incoming mail goes to an Inbox folder under Local Folders. There is no separate hierarchy for each account. In the test profile I set up, the account has its own hierarchy.
Hope that helps!
| Assignee | ||
Comment 5•7 years ago
|
||
Sigh, another variation of the theme :-( - I'll look into it.
Summary: Fetch Headers Only - download rest of message does not respond → Fetch Headers Only - download rest of message does not respond if Global Inbox (in Local Folders) is used
| Assignee | ||
Comment 6•7 years ago
|
||
I reproduced it with a global inbox.
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 7•7 years ago
|
||
Debug shows:
[5892, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004002: file c:/mozilla-source/comm-central/comm/mailnews/local/src/nsPop3Service.cpp, line 375
[5892, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004002: file c:/mozilla-source/comm-central/comm/mailnews/local/src/nsMailboxService.cpp, line 606
[5892, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004002: file c:/mozilla-source/comm-central/netwerk/base/nsNetUtil.cpp, line 236
So basically nsMailboxService::NewChannel2() calls nsPop3Service::NewURI() and that fails on getting the server from the folder, which is a little tricky for the global inbox. But it worked before. More debugging needed.
| Assignee | ||
Comment 8•7 years ago
|
||
OK, this is a regression from this:
https://hg.mozilla.org/comm-central/rev/bbfc8e24eae2#l5.16
ParseUrl() will fail for URLs of the form mailbox://user@domain@server/folder?number=nn, but we still need to scan the search part ?number=nn
The search part *must* be scanned, otherwise |mailboxUrl->GetMessageKey(&msgKey);| returns a bad key in nsPop3Service::NewURI() and it's downhill from there, no header and no associated account can't be found. In the end it uses the server associated with "Local Folders" and that's not a POP server, hence the download of the full message fails.
Comment on attachment 9021927 [details] [diff] [review]
1503395-restore-ParseSearchPart.patch
Review of attachment 9021927 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks, works for me on a POP3 account deferred to Local Folders.
::: mailnews/local/src/nsMailboxUrl.cpp
@@ +419,5 @@
> + if (NS_SUCCEEDED(rv)) {
> + // Do not try to parse URLs of the form
> + // mailbox://user@domain@server/folder?number=nn since this will fail.
> + // Check for format lacking absolute path.
> + if(PromiseFlatCString(aSpec).Find("///") != kNotFound) {
Space after 'if'.
Attachment #9021927 -
Flags: review?(acelists) → review+
Comment 10•7 years ago
|
||
Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/22fd73b428cd
Bug 1482720 follow-up: Don't skip ParseUrl() completely, call at least ParseSearchPart(). r=aceman
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•7 years ago
|
Component: Mail Window Front End → Networking: POP
Product: Thunderbird → MailNews Core
Target Milestone: --- → Thunderbird 65.0
| Assignee | ||
Comment 11•7 years ago
|
||
Comment on attachment 9021927 [details] [diff] [review]
1503395-restore-ParseSearchPart.patch
[Triage Comment]
Not risky, restores part of previously removed code.
Attachment #9021927 -
Flags: approval-comm-esr60+
Attachment #9021927 -
Flags: approval-comm-beta+
| Assignee | ||
Comment 12•7 years ago
|
||
Reporter: If this affects you badly, I can compile a special TB 60.3.1 with the fix, but you may have trouble installing that on Linux.
| Reporter | ||
Comment 13•7 years ago
|
||
(In reply to Jorg K (GMT+2) from comment #12)
> Reporter: If this affects you badly, I can compile a special TB 60.3.1 with
> the fix, but you may have trouble installing that on Linux.
I'm running Linux. But I can live with the issue.
| Assignee | ||
Comment 14•7 years ago
|
||
| Assignee | ||
Comment 15•7 years ago
|
||
TB 60.3.1/60.4 ESR:
https://hg.mozilla.org/releases/comm-esr60/rev/3298b86a53768581b7cea561cccd9f2ffc7d7b2b
status-thunderbird64:
--- → fixed
status-thunderbird65:
--- → fixed
status-thunderbird_esr60:
--- → fixed
tracking-thunderbird_esr60:
--- → 64+
Comment 16•7 years ago
|
||
I am with windows 10, tried 60.3.0 and 64.0b1, 32 and 64 bits, both with same problem too, can't downgrade to older versions because it crashes on open.
Comment 17•7 years ago
|
||
Nightly 64 and 65 same problem too.
| Assignee | ||
Comment 18•7 years ago
|
||
This has been fixed, only the fix hasn't been visible in published versions.
Which version do you want to use? 60, 64 or 65 and on which platform and I'll give you a download link.
Comment 19•7 years ago
|
||
Any what is working, can the the "official release" 60.3.0, but i don't mind since it working "
PS: I use the Pt-BR version, but i can use english without problem too.
| Assignee | ||
Comment 20•7 years ago
|
||
Sadly you didn't say which OS :-(
This should be fixed in today's Daily:
http://ftp.mozilla.org/pub/thunderbird/nightly/latest-comm-central-l10n/
(all languages and platforms, scroll to the bottom for the 2018-11-07 version).
TB 60.3.1 (pre-release, English only):
https://queue.taskcluster.net/v1/task/Hg12qf5QRcKkm8v-NmkzEQ/runs/0/artifacts/public/build/target.dmg - Mac
https://queue.taskcluster.net/v1/task/dgw8olcTQ2mSTMzpnWgnBw/runs/0/artifacts/public/build/install/sea/target.installer.exe - Windows 32bit
https://queue.taskcluster.net/v1/task/TGy5nPDnRhKHt9AdIW34Ww/runs/0/artifacts/public/build/install/sea/target.installer.exe - Windows 64bit
TB 64 beta 2 (pre-release, English only):
https://queue.taskcluster.net/v1/task/ZEZPH573SlKKDjNQQWGH6w/runs/0/artifacts/public/build/target.dmg - Mac
https://queue.taskcluster.net/v1/task/AkwLLqI7QHWRQTbCNKchUw/runs/0/artifacts/public/build/install/sea/target.installer.exe - Windows 32bit
https://queue.taskcluster.net/v1/task/STDz8VRJSWi8lreBHg6-Dw/runs/0/artifacts/public/build/install/sea/target.installer.exe - Windows 64bit.
I recommend 60.3.1 which will be officially released in early December.
Let me know if you need Linux.
You need to log in
before you can comment on or make changes to this bug.
Description
•